--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -71,6 +71,9 @@ xpcshell:
             by-test-platform:
                 windows.*: true
                 default: false
+    fetches:
+        build:
+            - gdata-provider.en-US.xpi
 
 mozmill:
     description: "mozmill test run"
