Port bug 1475903 to TB: add mozDOMLocalization.js/manifest to package manifest. rs=bustage-fix

--- a/mail/installer/package-manifest.in
+++ b/mail/installer/package-manifest.in
@@ -581,6 +581,9 @@
 ; svg
 @RESPATH@/res/svg.css
 
+@RESPATH@/components/mozDOMLocalization.js
+@RESPATH@/components/mozDOMLocalization.manifest
+
 ; [Extensions]
 @RESPATH@/components/extensions-toolkit.manifest
 @RESPATH@/components/extension-process-script.js
