--- a/calendar/test/unit/xpcshell-shared.ini
+++ b/calendar/test/unit/xpcshell-shared.ini
@@ -30,7 +30,7 @@
 [test_freebusy.js]
 [test_freebusy_service.js]
 [test_gdata_provider.js]
-requesttimeoutfactor = 2
+skip-if = true # See bug 1481180. requesttimeoutfactor = 2
 [test_hashedarray.js]
 [test_ics.js]
 [test_ics_parser.js]
