Bug 1484434 - Port bug 1478813: add cbindgen to TaskCluster files. rs=bustage-fix CLOSED TREE

--- a/taskcluster/ci/toolchain/kind.yml
+++ b/taskcluster/ci/toolchain/kind.yml
@@ -21,9 +21,11 @@ jobs:
     - linux64-rust-1.19
     - linux64-rust-macos
     - linux64-sccache
+    - linux64-cbindgen
     - linux64-node
     - win64-clang-cl
     - win64-rust
     - win64-rust-1.19
     - win64-sccache
+    - win64-cbindgen
     - win64-node
