--- a/suite/installer/Makefile.in
+++ b/suite/installer/Makefile.in
@@ -4,7 +4,7 @@
 
 STANDALONE_MAKEFILE := 1
 
-include $(moztopsrcdir)/config/rules.mk
+include $(topsrcdir)/config/rules.mk
 
 MOZ_PKG_REMOVALS = $(srcdir)/removed-files.in
 
@@ -14,13 +14,13 @@ ifndef SYSTEM_LIBXUL
 MOZ_PKG_FATAL_WARNINGS = 1
 endif
 
-DEFINES += -DPKG_LOCALE_MANIFEST=$(commtopobjdir)/suite/installer/locale-manifest.in
+DEFINES += -DPKG_LOCALE_MANIFEST=$(topobjdir)/comm/suite/installer/locale-manifest.in
 MOZ_CHROME_LOCALE_ENTRIES=@RESPATH@/chrome/
 
 MOZ_PKG_DUPEFLAGS = \
 	-w \
 	-f $(srcdir)/allowed-dupes.mn \
-	-f $(moztopsrcdir)/browser/installer/allowed-dupes.mn \
+	-f $(topsrcdir)/browser/installer/allowed-dupes.mn \
 	$(NULL)
 
 MOZ_NONLOCALIZED_PKG_LIST = \
@@ -154,7 +154,7 @@ NON_OMNIJAR_FILES = \
 	defaults/profile/chrome/userContent-example.css \
 	$(NULL)
 
-include $(moztopsrcdir)/toolkit/mozapps/installer/packager.mk
+include $(topsrcdir)/toolkit/mozapps/installer/packager.mk
 
 ifeq (Darwin, $(OS_ARCH))
 BINPATH = $(_BINPATH)
@@ -195,7 +195,7 @@ DEFINES += -DMOZ_OMNIJAR=1
 endif
 
 libs::
-	$(MAKE) -C $(commtopobjdir)/suite/locales langpack
+	$(MAKE) -C $(topobjdir)/comm/suite/locales langpack
 
 ifeq (WINNT,$(OS_ARCH))
 PKGCOMP_FIND_OPTS =
@@ -215,7 +215,7 @@ package-compare:: $(MOZ_PKG_MANIFEST)
 	rm -f $(DIST)/pack-list.txt $(DIST)/bin-list.txt
 
 # The comm-* source stamp is already there.
-PLATFORM_SOURCE_STAMP = $(firstword $(shell hg -R "$(moztopsrcdir)" parent --template="{node|short}\n" 2>/dev/null))
-PLATFORM_SOURCE_REPO = $(shell hg -R "$(moztopsrcdir)" showconfig paths.default 2>/dev/null | sed -e "s/^ssh:/https:/")
+PLATFORM_SOURCE_STAMP = $(firstword $(shell hg -R "$(topsrcdir)" parent --template="{node|short}\n" 2>/dev/null))
+PLATFORM_SOURCE_REPO = $(shell hg -R "$(topsrcdir)" showconfig paths.default 2>/dev/null | sed -e "s/^ssh:/https:/")
 make-sourcestamp-file::
 	@echo "$(PLATFORM_SOURCE_REPO)/rev/$(PLATFORM_SOURCE_STAMP)" >> $(MOZ_SOURCESTAMP_FILE)
